@@ -3,6 +3,8 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
 
  - translation from a database composition representation to the
      npg_tracking::glossary::composition type object
+ - db query for compisition-based tables should include a condition
+     on tag_index if only lanes or plexes ar ebeing retrieved
  - Travis CI build: when building dependencies, us the same
    branch as the one the pull request is made to.
  - back to testing with mysql 5.7.13 in travis
